--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 {% block content %}
     <h1>{% block title %} Converted Values Displayed {% endblock %}</h1>
 
-            <h3>The arabic number converted is {{ message[1][0]}}</h3>
-            <h3>The roman string converted is {{ message[1][1]}}</h3>
+            <h3>The arabic number converted is {{ message[0]}}</h3>
+            <h3>The roman string converted is {{ message[1]}}</h3>
 
         </div>
 
